--- a/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_async_langchain_interface.yaml
+++ b/tests/integration/extensions/cassettes/test_langchain/TestLangChain.test_async_langchain_interface.yaml
@@ -12,22 +12,22 @@ interactions:
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
     body:
-      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+      string: '{"result":{"concurrency":{"limit":200,"remaining":200}}}'
     headers:
       cache-control:
       - private
       content-length:
-      - '54'
+      - '56'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
       date:
-      - Thu, 25 Jan 2024 15:50:07 GMT
+      - Wed, 20 Mar 2024 08:27:10 GMT
       keep-alive:
       - timeout=72
       set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
+      - 2eef5f4c257f6bca76e8da5586743beb=75698ca04a07007fb30d5b2346e9bff6; path=/;
         HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
@@ -49,20 +49,20 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation?version=2024-01-10
+    uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"32a246fc-a752-4322-b024-a166da4df749","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.052Z","results":[{"generated_text":"knock
-        knock","generated_token_count":3,"input_token_count":7,"stop_reason":"eos_token","seed":994549561}]}'
+      string: '{"id":"036314cb-2213-429a-9eff-53e6e1b20c9e","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:10.908Z","results":[{"generated_text":"happy
+        birthday to you","generated_token_count":5,"input_token_count":7,"stop_reason":"eos_token","seed":1264812732}]}'
     headers:
       content-length:
-      - '250'
+      - '261'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-19'
       date:
-      - Thu, 25 Jan 2024 15:50:08 GMT
+      - Wed, 20 Mar 2024 08:27:10 GMT
       keep-alive:
       - timeout=72
       vary:
@@ -85,20 +85,19 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation?version=2024-01-10
+    uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"09307a47-f106-4591-bd43-645aa4f9b16b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:08.450Z","results":[{"generated_text":"b,
-        c = 12, 10, 6, 6,","generated_token_count":11,"input_token_count":13,"stop_reason":"eos_token","seed":2918769209}]}'
+      string: '{"id":"b281a2b0-54a0-4779-92b1-67d2f787cf70","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:11.222Z","results":[{"generated_text":"e","generated_token_count":3,"input_token_count":13,"stop_reason":"eos_token","seed":3026768395}]}'
     headers:
       content-length:
-      - '262'
+      - '242'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-19'
       date:
-      - Thu, 25 Jan 2024 15:50:08 GMT
+      - Wed, 20 Mar 2024 08:27:11 GMT
       keep-alive:
       - timeout=72
       vary:
