--- a/tests/integration/request/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
+++ b/tests/integration/request/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
@@ -12,20 +12,23 @@ interactions:
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
     body:
-      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+      string: '{"result":{"concurrency":{"limit":200,"remaining":200}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:50:01 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '54'
+      - '56'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:27:43 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=1e3545705d3737525c7629e9f28dc93d; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
     status:
@@ -46,23 +49,21 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation?version=2024-01-10
+    uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"48368038-f6cf-48f6-8d90-1898f9c26885","model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:50:01.828Z","results":[{"generated_text":"5","generated_token_count":2,"input_token_count":5,"stop_reason":"eos_token"}]}'
+      string: '{"id":"93181d41-fd12-428a-8e5c-de25f3583881","model_id":"google/flan-t5-xl","created_at":"2024-03-20T08:27:43.294Z","results":[{"generated_text":"5","generated_token_count":2,"input_token_count":5,"stop_reason":"eos_token"}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:50:01 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '225'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-19'
+      date:
+      - Wed, 20 Mar 2024 08:27:43 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
     status:
@@ -82,24 +83,25 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/requests/48368038-f6cf-48f6-8d90-1898f9c26885/feedback?version=2023-11-22
+    uri: https://api.com/v2/requests/93181d41-fd12-428a-8e5c-de25f3583881/feedback?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":454,"created_at":"2024-03-06T20:50:03.000Z","updated_at":"2024-03-06T20:50:03.000Z","comment":"Well
-        done.","categories":["correct_content"],"api_request":"48368038-f6cf-48f6-8d90-1898f9c26885","vote":"up","contact_consent":false}}'
+      string: '{"result":{"id":2098,"created_at":"2024-03-20T08:27:44.000Z","updated_at":"2024-03-20T08:27:44.000Z","comment":"Well
+        done.","categories":["correct_content"],"api_request":"93181d41-fd12-428a-8e5c-de25f3583881","vote":"up","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:50:02 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '246'
+      - '247'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:27:44 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=b0f51927d7cda7413e134b98370685da; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -126,24 +128,25 @@ interactions:
       content-type:
       - application/json
     method: PUT
-    uri: https://api.com/v2/requests/48368038-f6cf-48f6-8d90-1898f9c26885/feedback?version=2023-11-22
+    uri: https://api.com/v2/requests/93181d41-fd12-428a-8e5c-de25f3583881/feedback?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":454,"created_at":"2024-03-06T20:50:03.000Z","updated_at":"2024-03-06T20:50:03.468Z","comment":"I''m
-        not sure about the category","categories":["correct_style"],"api_request":"48368038-f6cf-48f6-8d90-1898f9c26885","vote":"down","contact_consent":false}}'
+      string: '{"result":{"id":2098,"created_at":"2024-03-20T08:27:44.000Z","updated_at":"2024-03-20T08:27:44.949Z","comment":"I''m
+        not sure about the category","categories":["correct_style"],"api_request":"93181d41-fd12-428a-8e5c-de25f3583881","vote":"down","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:50:03 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '267'
+      - '268'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:27:44 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=343dd5c30caabf2689c32da1b251e450; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -165,24 +168,27 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/48368038-f6cf-48f6-8d90-1898f9c26885/feedback?version=2023-11-22
+    uri: https://api.com/v2/requests/93181d41-fd12-428a-8e5c-de25f3583881/feedback?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":454,"created_at":"2024-03-06T20:50:03.000Z","updated_at":"2024-03-06T20:50:03.000Z","comment":"I''m
-        not sure about the category","categories":["correct_style"],"api_request":"48368038-f6cf-48f6-8d90-1898f9c26885","vote":"down","contact_consent":false}}'
+      string: '{"result":{"id":2098,"created_at":"2024-03-20T08:27:44.000Z","updated_at":"2024-03-20T08:27:45.000Z","comment":"I''m
+        not sure about the category","categories":["correct_style"],"api_request":"93181d41-fd12-428a-8e5c-de25f3583881","vote":"down","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:50:04 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '267'
+      - '268'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:27:46 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=8686c332122cd3e245e38ec96b4437d3; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
