--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
@@ -16,62 +16,53 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation_stream?version=2024-01-10
+    uri: https://api.com/v2/text/generation_stream?version=2024-03-19
   response:
     body:
       string: 'retry: 3000
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.611Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished","seed":4105291987}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:26.916Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished","seed":3165970672}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.662Z","results":[{"generated_text":"Nice","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:26.968Z","results":[{"generated_text":"we","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.692Z","results":[{"generated_text":".","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:26.995Z","results":[{"generated_text":"
+        have","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.721Z","results":[{"generated_text":"
-        I","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.022Z","results":[{"generated_text":"
+        nice","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.751Z","results":[{"generated_text":"''","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.050Z","results":[{"generated_text":"
+        weather","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.780Z","results":[{"generated_text":"m","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.079Z","results":[{"generated_text":"
+        here","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.810Z","results":[{"generated_text":"
-        setting","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.107Z","results":[{"generated_text":",","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.839Z","results":[{"generated_text":"
-        up","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.135Z","results":[{"generated_text":"
+        only","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.869Z","results":[{"generated_text":"
-        for","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.163Z","results":[{"generated_text":"
+        this","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.900Z","results":[{"generated_text":"
-        3","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.189Z","results":[{"generated_text":"
+        rain","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.930Z","results":[{"generated_text":"
-        rehearsal","generated_token_count":10,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.217Z","results":[{"generated_text":"...","generated_token_count":10,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.958Z","results":[{"generated_text":"s","generated_token_count":11,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.987Z","results":[{"generated_text":"
-        today","generated_token_count":12,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:05.016Z","results":[{"generated_text":".","generated_token_count":13,"input_token_count":0,"stop_reason":"not_finished"}]}
-
-
-        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:05.046Z","results":[{"generated_text":"","generated_token_count":14,"input_token_count":0,"stop_reason":"eos_token","seed":4105291987}]}
+        data: {"id":"7b3040e7-9917-467d-8f1f-dd3ab51369e5","model_id":"google/flan-ul2","created_at":"2024-03-20T08:27:27.245Z","results":[{"generated_text":"","generated_token_count":11,"input_token_count":0,"stop_reason":"eos_token","seed":3165970672}]}
 
 
         event: close
@@ -79,15 +70,16 @@ interactions:
 
         '
     headers:
-      Cache-Control:
+      cache-control:
       - no-cache,no-transform
-      Connection:
-      - keep-alive
-      Content-Type:
+      content-type:
       - text/event-stream
-      Date:
-      - Wed, 06 Mar 2024 20:47:04 GMT
-      Transfer-Encoding:
+      date:
+      - Wed, 20 Mar 2024 08:27:26 GMT
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=8686c332122cd3e245e38ec96b4437d3; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
       - chunked
       x-no-compression:
       - '1'
