--- a/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_stream.yaml
+++ b/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_stream.yaml
@@ -2,8 +2,9 @@ interactions:
 - request:
     body: '{"messages": [{"content": "I want to kill them! There are my enemies.",
       "role": "user"}], "model_id": "meta-llama/llama-2-70b-chat", "moderations":
-      {"hap": {"input": true, "output": true, "send_tokens": true, "threshold": 0.7}},
-      "parameters": {"max_new_tokens": 10, "min_new_tokens": 3}}'
+      {"hap": {"input": {"enabled": true, "send_tokens": false, "threshold": 0.7},
+      "output": {"enabled": true, "send_tokens": true, "threshold": 0.7}}}, "parameters":
+      {"max_new_tokens": 10, "min_new_tokens": 3}}'
     headers:
       accept:
       - '*/*, text/event-stream'
@@ -14,52 +15,52 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '287'
+      - '353'
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat_stream?version=2024-01-10
+    uri: https://api.com/v2/text/chat_stream?version=2024-03-19
   response:
     body:
       string: 'retry: 3000
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.031Z","results":[{"generated_text":"  ","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.460Z","results":[{"generated_text":"  ","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.066Z","results":[{"generated_text":"I
-        understan","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.497Z","results":[{"generated_text":"I
+        understan","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.099Z","results":[{"generated_text":"d
-        tha","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.546Z","results":[{"generated_text":"d
+        tha","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.136Z","results":[{"generated_text":"t
-        yo","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.584Z","results":[{"generated_text":"t
+        yo","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.170Z","results":[{"generated_text":"u
-        ma","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.622Z","results":[{"generated_text":"u
+        ma","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.204Z","results":[{"generated_text":"y
-        fee","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.661Z","results":[{"generated_text":"y
+        fee","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.238Z","results":[{"generated_text":"l
-        angr","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.700Z","results":[{"generated_text":"l
+        angr","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.272Z","results":[{"generated_text":"y
-        o","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.750Z","results":[{"generated_text":"y
+        o","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.307Z","results":[{"generated_text":"r
-        ups","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":2080104655}],"conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559"}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.792Z","results":[{"generated_text":"r
+        fr","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":2048779827}],"conversation_id":"6599942c-86be-436d-9be2-943bd8157159"}
 
 
-        data: {"id":"56eca34c-7b45-4fb6-ac1b-4366220dbb6d","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:58.534Z","conversation_id":"0ca2efc0-a28f-4430-b165-c235a653f559","moderation":{"hap":[{"score":0.8397555351257324,"flagged":true,"tokens":[{"token":"i","index":0,"score":0.06191753223538399},{"token":"want","index":2,"score":0.03426007553935051},{"token":"to","index":7,"score":0.06545766443014145},{"token":"kill","index":10,"score":0.1568538099527359},{"token":"them","index":15,"score":0.47369813919067383},{"token":"!","index":19,"score":0.07074112445116043}],"success":true,"position":{"start":0,"end":20}}]}}
+        data: {"id":"a3cc11f9-37c9-4352-b217-6f7925b5e15e","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-21T18:55:40.942Z","conversation_id":"6599942c-86be-436d-9be2-943bd8157159","moderations":{"hap":[{"score":0.8397555351257324,"flagged":true,"success":true,"position":{"start":0,"end":20}}]}}
 
 
         event: close
@@ -74,7 +75,7 @@ interactions:
       Content-Type:
       - text/event-stream
       Date:
-      - Wed, 06 Mar 2024 20:45:57 GMT
+      - Thu, 21 Mar 2024 18:55:40 GMT
       Transfer-Encoding:
       - chunked
       x-no-compression:
