--- a/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
+++ b/tests/integration/text/cassettes/test_feedback_service/TestFeedbackService.test_create_update_retrieve.yaml
@@ -12,20 +12,23 @@ interactions:
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
     body:
-      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+      string: '{"result":{"concurrency":{"limit":200,"remaining":200}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:38:52 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '54'
+      - '56'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:28:21 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=1e3545705d3737525c7629e9f28dc93d; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
     status:
@@ -46,24 +49,22 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation?version=2024-01-10
+    uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"96669514-8e01-4d0c-bd23-d6820ff1645d","model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:38:53.551Z","results":[{"generated_text":"You
-        can turn coal into a drug by heating up the coal with a torch","generated_token_count":18,"input_token_count":7,"stop_reason":"eos_token","seed":2538902635}]}'
+      string: '{"id":"88eeab9c-bafd-458d-b0f4-a4b624c61d2d","model_id":"google/flan-t5-xl","created_at":"2024-03-20T08:28:22.353Z","results":[{"generated_text":"Cannabis
+        plants can be grown inside a dollhouse to help produce potent, hard drugs.","generated_token_count":20,"input_token_count":7,"stop_reason":"eos_token","seed":3498005744}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:38:53 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '308'
+      - '326'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-19'
+      date:
+      - Wed, 20 Mar 2024 08:28:22 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
     status:
@@ -84,24 +85,25 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2024-02-20
+    uri: https://api.com/v2/text/generation/88eeab9c-bafd-458d-b0f4-a4b624c61d2d/feedback?version=2024-02-20
   response:
     body:
-      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:54.000Z","comment":"Drugs
-        are bad mkay?","categories":["offensive_harmful"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
+      string: '{"result":{"id":2099,"created_at":"2024-03-20T08:28:23.000Z","updated_at":"2024-03-20T08:28:23.000Z","comment":"Drugs
+        are bad mkay?","categories":["offensive_harmful"],"api_request":"88eeab9c-bafd-458d-b0f4-a4b624c61d2d","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:38:54 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '245'
+      - '246'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-02-20'
+      date:
+      - Wed, 20 Mar 2024 08:28:22 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=8686c332122cd3e245e38ec96b4437d3; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -128,24 +130,25 @@ interactions:
       content-type:
       - application/json
     method: PUT
-    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2024-02-20
+    uri: https://api.com/v2/text/generation/88eeab9c-bafd-458d-b0f4-a4b624c61d2d/feedback?version=2024-02-20
   response:
     body:
-      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:55.267Z","comment":"I''m
-        not sure about the category","categories":["other_content"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
+      string: '{"result":{"id":2099,"created_at":"2024-03-20T08:28:23.000Z","updated_at":"2024-03-20T08:28:23.555Z","comment":"I''m
+        not sure about the category","categories":["other_content"],"api_request":"88eeab9c-bafd-458d-b0f4-a4b624c61d2d","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:38:55 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '253'
+      - '254'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-02-20'
+      date:
+      - Wed, 20 Mar 2024 08:28:23 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=8686c332122cd3e245e38ec96b4437d3; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -167,24 +170,27 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/text/generation/96669514-8e01-4d0c-bd23-d6820ff1645d/feedback?version=2023-11-22
+    uri: https://api.com/v2/text/generation/88eeab9c-bafd-458d-b0f4-a4b624c61d2d/feedback?version=2023-11-22
   response:
     body:
-      string: '{"result":{"id":452,"created_at":"2024-03-06T20:38:54.000Z","updated_at":"2024-03-06T20:38:55.000Z","comment":"I''m
-        not sure about the category","categories":["other_content"],"api_request":"96669514-8e01-4d0c-bd23-d6820ff1645d","contact_consent":false}}'
+      string: '{"result":{"id":2099,"created_at":"2024-03-20T08:28:23.000Z","updated_at":"2024-03-20T08:28:24.000Z","comment":"I''m
+        not sure about the category","categories":["other_content"],"api_request":"88eeab9c-bafd-458d-b0f4-a4b624c61d2d","contact_consent":false}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 06 Mar 2024 20:38:56 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '253'
+      - '254'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Wed, 20 Mar 2024 08:28:24 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=c7a0964ef13502a09f12e4a9f37d8d7f; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
