--- a/tests/integration/text/cassettes/test_moderation_service/TestModerationService.test_create_moderation.yaml
+++ b/tests/integration/text/cassettes/test_moderation_service/TestModerationService.test_create_moderation.yaml
@@ -1,8 +1,7 @@
 interactions:
 - request:
-    body: '{"hap": {"send_tokens": true, "threshold": 0.5}, "implicit_hate": {"send_tokens":
-      true, "threshold": 0.5}, "input": "Ice cream sucks!", "stigma": {"send_tokens":
-      true, "threshold": 0.5}}'
+    body: '{"hap": {"send_tokens": true, "threshold": 0.5}, "input": "Ice cream sucks!",
+      "social_bias": {"send_tokens": true, "threshold": 0.5}}'
     headers:
       accept:
       - '*/*'
@@ -11,27 +10,27 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '186'
+      - '133'
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/moderations?version=2023-11-22
+    uri: https://api.com/v2/text/moderations?version=2024-03-19
   response:
     body:
-      string: '{"results":[{"hap":[{"score":0.13099461793899536,"flagged":false,"success":true,"position":{"start":0,"end":15}}],"implicit_hate":[{"score":0.0025605005212128162,"flagged":false,"success":true,"position":{"start":0,"end":15}}],"stigma":[{"score":0.17938657104969025,"flagged":false,"success":true,"position":{"start":0,"end":15}}]}]}'
+      string: '{"results":[{"hap":[{"score":0.13099458813667297,"flagged":false,"success":true,"position":{"start":0,"end":15}}],"social_bias":[{"score":0.026667388156056404,"flagged":false,"success":true,"position":{"start":0,"end":15}}]}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:46 GMT
+      - Thu, 21 Mar 2024 19:04:11 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '333'
+      - '226'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2023-11-22'
+      - '2024-03-19'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -44,9 +43,8 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"hap": {"send_tokens": true, "threshold": 0.5}, "implicit_hate": {"send_tokens":
-      true, "threshold": 0.5}, "input": "It tastes like poop.", "stigma": {"send_tokens":
-      true, "threshold": 0.5}}'
+    body: '{"hap": {"send_tokens": true, "threshold": 0.5}, "input": "It tastes like
+      poop.", "social_bias": {"send_tokens": true, "threshold": 0.5}}'
     headers:
       accept:
       - '*/*'
@@ -55,29 +53,27 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '190'
+      - '137'
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/moderations?version=2023-11-22
+    uri: https://api.com/v2/text/moderations?version=2024-03-19
   response:
     body:
-      string: '{"results":[{"hap":[{"score":0.8111817240715027,"flagged":true,"tokens":[{"token":"it","index":0,"score":0.1462331861257553},{"token":"tastes","index":3,"score":0.1076018288731575},{"token":"like","index":10,"score":0.12123598903417587},{"token":"poop","index":15,"score":0.19853029400110245},{"token":".","index":19,"score":0.07889079302549362}],"success":true,"position":{"start":0,"end":19}}],"implicit_hate":[{"score":0.9981448650360107,"flagged":true,"tokens":[{"token":"it","index":0,"score":0.11787550896406174},{"token":"tastes","index":3,"score":0.1605272889137268},{"token":"like","index":10,"score":0.07254142314195633},{"token":"poop","index":15,"score":0.10483767092227936},{"token":".","index":19,"score":0.12613795697689056}],"success":true,"position":{"start":0,"end":19}}],"stigma":[{"score":0.8026911616325378,"flagged":true,"tokens":[{"token":"it","index":0,"score":0.1775500327348709},{"token":"tastes","index":3,"score":0.11649750918149948},{"token":"like","index":10,"score":0.1322403997182846},{"token":"poop","index":15,"score":0.16683607548475266},{"token":".","index":19,"score":0.08629968017339706}],"success":true,"position":{"start":0,"end":19}}]}]}'
+      string: '{"results":[{"hap":[{"score":0.8111818432807922,"flagged":true,"tokens":[{"token":"it","index":0,"score":0.1462332010269165},{"token":"tastes","index":3,"score":0.10760178416967392},{"token":"like","index":10,"score":0.12123601883649826},{"token":"poop","index":15,"score":0.19853029400110245},{"token":".","index":19,"score":0.07889077812433243}],"success":true,"position":{"start":0,"end":19}}],"social_bias":[{"score":0.9442079663276672,"flagged":true,"tokens":[{"token":"it","index":0,"score":0.12584927678108215},{"token":"tastes","index":3,"score":0.14300335943698883},{"token":"like","index":10,"score":0.08753492683172226},{"token":"poop","index":15,"score":0.10974029451608658},{"token":".","index":19,"score":0.0938180685043335}],"success":true,"position":{"start":0,"end":19}}]}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:46 GMT
+      - Thu, 21 Mar 2024 19:04:12 GMT
       Keep-Alive:
       - timeout=72
-      Transfer-Encoding:
-      - chunked
       content-length:
-      - '1178'
+      - '791'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2023-11-22'
+      - '2024-03-19'
       vary:
       - accept-encoding
       x-ratelimit-limit:
